Release notes for Agora-Moodle2 (http://agora.xtec.cat)

More information on each of the fixes can be found in the project
development home at https://github.com/projectestac/agora_moodle2

Changes 15.07.20
---------------------------------------------------------------------------------------
- Moodle upgraded to from 2.8.7
- Avoid using global variable section to solve a bug on week format
- MARSUPIAL: Add new permission to allow users to change their own credentials only
- Only enabled modules has to be backup
- Reduce from 1 week to 1 the waiting time to purge temp files
- Set empty SMTP hosts to avoid overhead in sending mails
- Change locking from NFS to DB
- Add loglifetime setting for backup logs
- GEOGEBRA: Restore executing JS embedded in Geogebra files

Changes 15.06.18
---------------------------------------------------------------------------------------
- Moodle upgraded to from 2.8.6
- Hide some settings to non xtecadmins
- Set stasharguments by default in config.php
- Deleted participants as default course block
- Configured new Logging system
- Deleted patch to let teachers configure system cohorts
- Changed TinyMCE to Atto
- Deleted EOICampus
- Updated theme XTEC2 with new features:
  - Solved advices cache
  - Added nodes color scheme
  - Added new user menu
  - Style maintenance page and popup layout
  - Upgraded fontawesome to 4.3.0
  - Toggle block view by clicking on each header
  - Increased block icon size
  - Deleted supercollapse on the grader
  - Added footer whatsapp and skype icons
- Added some extra atto modules:
  - Font family
  - Font size
  - Wiris (added for Atto and deleted for tinyMCE)
- Updated modules:
  - Marsupial to 2.7.0.0 with code and settings cleaning
  - Jclic, Geogebra i QV to version v0.2.7 with events, code and settings cleaning
  - Geogebra now admits HTML5
  - GoogleOauth, Choicegroup, Wiris, OpenUniversity question modules, Hotpotatoes, Journal, Questionnaire
  - Language packs
- Applied patches: